--- a/GiveCamp 2011 Jan/TeenJob1/Jobs/Jobs.cshtml
+++ b/GiveCamp 2011 Jan/TeenJob1/Jobs/Jobs.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/_SiteLayout.cshtml";
-    Page.Title = "About TeenJob.org";
+    Page.Title = "Jobs";
     
     var db=Database.Open("StarterSite");
     var sqlQ = "Select * FROM Jobs";
