--- a/GiveCamp 2011 Jan/TeenJob1/_SiteLayout.cshtml
+++ b/GiveCamp 2011 Jan/TeenJob1/_SiteLayout.cshtml
@@ -29,9 +29,10 @@
                 
                 <ul id="menu">
                     <li><a href="@Href("~/")">Home</a></li>
-                    <li><a href="@Href("~/Jobs/Jobs.cshtml")">Jobs</a></li>
-                    <li><a href="@Href("~/Apply")">Apply</a></li>
+                    <li><a href="@Href("~/Jobs/Jobs")">Jobs</a></li>
+                    <li><a href="@Href("~/TeenApplication/Apply")">Apply</a></li>
                     <li><a href="@Href("~/About")">About</a></li>
+                    <!-- If user is an admin, add the admin tab. -->
                 </ul>
             </div>
             <div id="main">
